updated french translations

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -44,10 +44,10 @@
 <string name="dateFormat1">31 Décembre 2013</string>
 <string name="dateFormat2">31 Décembre 13</string>
 <string name="dateFormat">Format de date</string>
-<string name="date">date</string>
+<string name="date">Date</string>
 <string name="dayFr">Vendredi</string>
 <string name="dayMo">Lundi</string>
-<string name="daySa">samedi</string>
+<string name="daySa">Samedi</string>
 <string name="dayShortFr">Ven.</string>
 <string name="dayShortMo">Lun.</string>
 <string name="dayShortSa">Sam.</string>
@@ -55,7 +55,7 @@
 <string name="dayShortTh">Jeu.</string>
 <string name="dayShortTu">Mar.</string>
 <string name="dayShortWe">Mer.</string>
-<string name="daySu">dimanche</string>
+<string name="daySu">Dimanche</string>
 <string name="dayTh">Jeudi</string>
 <string name="dayTu">Mardi</string>
 <string name="dayWe">Mercredi</string>
@@ -69,46 +69,47 @@
 <string name="dlHadith">Télécharger les données pour les Hadith?</string>
 <string name="dlSound">Télécharger les voix  \" % %1$s \" ( %2$s )?</string>
 <string name="donateDesc">Pour soutenir le développeur, cliquez ici</string>
-<string name="donate">Soutien</string>
-<string name="donateDlg">Ceci est juste une aide pour le développeur:) \n Alhamdulillah, je ne ai pas besoin de cet argent, mais si vous avez envie de me soutenir, je vous remercie ...</string>
+<string name="donate">Soutien</string> 
+<string name="donateDlg">Ceci est juste une aide pour le développeur:) 
+\n Alhamdulillah, je ne ai pas besoin de cet argent, mais si vous avez envie de me soutenir, je vous remercie ...</string>
 <string name="earlyNotification">notification précoce</string>
 <string name="earlyText">reste %1$s %2$s minutes</string>
 <string name="error">Une erreur est survenue</string>
 <string name="fajr">fajr</string>
-<string name="fajrIshaaCalculation">Fajr / Ischa Calcul:</string>
-<string name="fasting">ramadan</string>
+<string name="fajrIshaaCalculation">Fajr / Icha Calcul:</string>
+<string name="fasting">Jeûne</string>
 <string name="favorite">Préféré</string>
 <string name="filePicker">Choisir fichier</string>
 <string name="fixTimezone">Fuseau horaire +/-:</string>
-<string name="foundXHadis">trouvé %1$s Hadith</string>
+<string name="foundXHadis"> %1$s Hadith trouvé</string>
 <string name="gmonth10">octobre</string>
 <string name="gmonth11">novembre</string>
 <string name="gmonth12">décembre</string>
 <string name="gmonth1">janvier</string>
 <string name="gmonth2">février</string>
-<string name="gmonth3">Mars</string>
+<string name="gmonth3">mars</string>
 <string name="gmonth4">avril</string>
-<string name="gmonth5">Mai</string>
+<string name="gmonth5">mai</string>
 <string name="gmonth6">juin</string>
 <string name="gmonth7">juillet</string>
 <string name="gmonth8">août</string>
 <string name="gmonth9">septembre</string>
 <string name="hadith">Sahih al-Bukhari</string>
-<string name="hDateFormat1">30 Muharram 1434</string>
-<string name="hDateFormat2">30 Muharram 34</string>
-<string name="hdateFormat">Date au format Hijri </string>
-<string name="hijriFix">ajuster la date Hijri </string>
-<string name="hmonth10">Shawwal</string>
-<string name="hmonth11">Dhu l-Qa'da</string>
-<string name="hmonth12">Dhū l-Hijja</string>
-<string name="hmonth1">Muharram</string>
+<string name="hDateFormat1">30 Mouharram 1434</string>
+<string name="hDateFormat2">30 Mouharram 34</string>
+<string name="hdateFormat">Date au format hégirien</string>
+<string name="hijriFix">ajuster la date hégirien </string>
+<string name="hmonth10">Chawwal</string>
+<string name="hmonth11">Dhou al qi`da</string>
+<string name="hmonth12">Dhou al-hijja</string>
+<string name="hmonth1">Mouharram</string>
 <string name="hmonth2">Safar</string>
-<string name="hmonth3">Rabi al-awwal</string>
-<string name="hmonth4">Rabi al-Achir</string>
-<string name="hmonth5">Joumada al-awwal</string>
-<string name="hmonth6">Joumada l-akhira</string>
+<string name="hmonth3">Rabia al awal</string>
+<string name="hmonth4">Rabia ath-thani</string>
+<string name="hmonth5">Joumada el Awwal</string>
+<string name="hmonth6">Joumada ath-thania</string>
 <string name="hmonth7">Rajab</string>
-<string name="hmonth8">Shaban</string>
+<string name="hmonth8">Chaabane</string>
 <string name="hmonth9">Ramadan</string>
 <string name="holyday10">(Arafat de l'Aïd al-Fitr)</string>
 <string name="holyday11">Eid al-Fitr 1er jour</string>
@@ -120,19 +121,19 @@
 <string name="holyday17">Eid al-Adha 3ème jour</string>
 <string name="holyday18">Eid al-Adha 4ème jour</string>
 <string name="holyday1">Nouvel An islamique</string>
-<string name="holyday2">Ashura</string>
-<string name="holyday3">Mawlid al-Nabi</string>
-<string name="holyday4">A partir des trois mois sacrés</string>
+<string name="holyday2">Achoura</string>
+<string name="holyday3">Mawlid an-Nabawi</string>
+<string name="holyday4">Début des trois mois sacrés</string>
 <string name="holyday5">Laylat ul Ragaib</string>
 <string name="holyday6">Laylat ul Isra et Miraj</string>
 <string name="holyday7">Laylat ul Bara'ah</string>
-<string name="holyday8">Ramadan commence</string>
+<string name="holyday8">Début du Ramadan </string>
 <string name="holyday9">Laylat al-Qadr</string>
-<string name="ishaa">Ishaa</string>
-<string name="juristicShafi">Hanafi</string>
+<string name="ishaa">Icha</string>
+<string name="juristicShafi">Shafi</string>
 <string name="kerahatDuration">Temps Makruh - Durée</string>
 <string name="kerahatIstiwa">Temps Istiwa  (avant la  prière du Zuhr) </string>
-<string name="kerahatMaghrib">Coucher du soleil (avant la prière du maghrib)</string>
+<string name="kerahatMaghrib">Coucher du soleil (avant la prière du soir)</string>
 <string name="kerahatSun">lever du soleil (après la prière du matin)</string>
 <string name="kerahatTime">Temps Makruh</string>
 <string name="langEn">Anglais</string>
@@ -140,13 +141,13 @@
 <string name="langTr">turc</string>
 <string name="language">Langue</string>
 <string name="leftText">Rèste %1$s |%2$s  %3$s </string>
-<string name="maghrib">Maghrib</string>
+<string name="maghrib">Maghreb</string>
 <string name="missedPrayers">Suivie des prières manquées</string>
 <string name="mixed">Mélange</string>
 <string name="monthly">Vue du mois</string>
 <string name="morningPrayer">Prière du matin</string>
 <string name="names">Les 99 noms d'Allah</string>
-<string name="newAddCity">Ajouter nouvelle ville</string>
+<string name="newAddCity">Ajouter une nouvelle ville</string>
 <string name="newDhikr">Nouveau Dhikr</string>
 <string name="noConnection">Pas de connection internet …</string>
 <string name="noFavs">Aucun favori</string>
@@ -199,7 +200,7 @@
 <string name="versionNr">3.6</string>
 <string name="version">Version</string>
 <string name="vibrationDesc">Miliseconds - attendre vibrer attendre ...</string>
-<string name="vibrationPattern">schema de vibrations</string>
+<string name="vibrationPattern">schéma de vibrations</string>
 <string name="volumeAlarm">Alarme-Volume</string>
 <string name="volumeMedia">Media-Volume</string>
 <string name="volumeRingtone">Sonnerie-Volume</string>
@@ -210,25 +211,26 @@
 <string name="widgetDesign">Thème</string>
 <string name="widgetLong">Horaires des prières - 4 * 1 Widget</string>
 <string name="widget">Horaires des prières - 2 * 2 Widget</string>
-<string name="widgetSilenter">Horaires des prières - Silenter Widget</string>
+<string name="widgetSilenter">Horaires des prières - silencieux Widget</string>
 <string name="widgetSmall">Horaires des prières - 1 * 1 Widget</string>
 <string name="witr">witr</string>
 <string name="yes">Oui</string>
 <string name="zoomIn">Agrandir</string>
 <string name="zoomOut">Diminuer</string>
-<string name="zuhr">Zuhr</string>
+<string name="zuhr">Dhohr</string>
 <string name="juristicHanafi">Hanafi</string>
 <string name="langAr">Arabe</string>
 <string name="calculated">Calculé</string>
-<string name="beta_tester">Devenir un beta_testeur</string>
+<string name="beta_tester">Devenir un beta-testeur</string>
 <string name="widgetClock2">Horaires des prières - Horloge 2 * 2 </string>
 <string name="numbers">Nombres</string>
 <string name="dateFormat3">31 Décembre </string>
-<string name="hDateFormat3">30 Muharram </string>
+<string name="hDateFormat3">30 Mouharram </string>
 <string name="useAlarm">Utilisez l'alarme pour les notifications</string>
 <string name="useAlarmDesc">EXPERIMENTAL - Si les notifications ne sont pas déclenchés à temps, vous pouvez essayer ce paramètre. Une icône d'alarme sera ajouté à la barre d'état!</string>
 <string name="oldAddCity">Choisire la ville manuellement</string>
 <string name="battery_whitelist_title">Optimisation de la batterie</string>
-<string name="battery_whitelist_desc">L'optimisation de la batterie peut empêcher les notifications d'être déclenché au bon moment. \nVous peut empêcher ce defaut en ajoutant cette application dans la liste des exceptions.</string>
+<string name="battery_whitelist_desc">L'optimisation de la batterie peut empêcher les notifications d'être déclenché au bon moment. 
+\nVous peut empêcher ce defaut en ajoutant cette application dans la liste des exceptions.</string>
 <string name="dontshowagain">Ne plus afficher</string>
 </resources>
