--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -95,27 +95,27 @@
   <string name="gmonth11">novembre</string>
   <string name="gmonth12">décembre</string>
   <string name="hadith">Sahih al-Bukhari</string>
-  <string name="hDateFormat1">30 Muharram 1434</string>
-  <string name="hDateFormat2">30 Muharram 34</string>
+  <string name="hDateFormat1">30 Mouharram 1434</string>
+  <string name="hDateFormat2">30 Mouharram 34</string>
   <string name="hdateFormat">Date au format Hijri</string>
   <string name="hijriFix">ajuster la date Hijri</string>
-  <string name="hmonth1">Muharram</string>
+  <string name="hmonth1">Mouharram</string>
   <string name="hmonth2">Safar</string>
-  <string name="hmonth3">Rabi al-awwal</string>
+  <string name="hmonth3">Rabi al-awal</string>
   <string name="hmonth4">Rabi al-Achir</string>
   <string name="hmonth5">Joumada al-awwal</string>
   <string name="hmonth6">Joumada l-akhira</string>
   <string name="hmonth7">Rajab</string>
-  <string name="hmonth8">Shaban</string>
+  <string name="hmonth8">Chaabane</string>
   <string name="hmonth9">Ramadan</string>
-  <string name="hmonth10">Shawwal</string>
+  <string name="hmonth10">Chawwal</string>
   <string name="hmonth11">Dhu l-Qa\'da</string>
-  <string name="hmonth12">Dhu l-Hidja</string>
+  <string name="hmonth12">Dhou l-Hijja</string>
   <string name="holyday1">Nouvel An islamique</string>
   <string name="holyday2">Achoura</string>
   <string name="holyday3">Mawlid al-Nabi</string>
   <string name="holyday4">A partir des trois mois sacrés</string>
-  <string name="holyday5">Laylat ul Ragaib</string>
+  <string name="holyday5">Laylat al Ragaib</string>
   <string name="holyday6">Laylat ul Isra et Miraj</string>
   <string name="holyday7">Laylat ul Bara\'ah</string>
   <string name="holyday8">Ramadan commence</string>
@@ -129,7 +129,7 @@
   <string name="holyday16">Eid al-Adha 2ème jour</string>
   <string name="holyday17">Eid al-Adha 3ème jour</string>
   <string name="holyday18">Eid al-Adha 4ème jour</string>
-  <string name="ishaa">Ishaa</string>
+  <string name="ishaa">Ichaa</string>
   <string name="juristicHanafi">Hanafi</string>
   <string name="juristicShafi">Shafi (par défaut)</string>
   <string name="kerahatDuration">Temps Makruh - Durée</string>
