--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -266,4 +266,5 @@
     <string name="rate_desc">Bewerte uns positiv falls du Gebetszeiten magst.</string>
     <string name="sendMail_sum">Sende mir eine E-Mail!</string>
     <string name="beta_tester_desc">Als Beta-Tester zu registrieren</string>
+    <string name="no_internet">Keine Internetverbindung</string>
 </resources>
