--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -249,4 +249,10 @@
   <string name="rate_desc">Eğer Namaz Vakti\'ni sevdiyseniz olumlu bir değerlendirme bırakın.</string>
   <string name="sendMail_sum">Bana bir e-posta gönder!</string>
   <string name="beta_tester_desc">Buraya tıklayarak Beta Tester olarak kayıt yaptır</string>
+  <string name="title_activity_maps">Harita</string>
+  <string name="no_internet">İnternet bağlantısı yok</string>
+  <string name="export">Dışarı aktar</string>
+  <string name="versionNotSupported">Android sürümü bunu desteklemiyor!</string>
+  <string name="from">Başlangıç</string>
+  <string name="to">Bitiş</string>
 </resources>
