use osm geocoder for fdroid (or optional from settings) #53

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -255,4 +255,5 @@
     <string name="from">From</string>
     <string name="to">To</string>
     <string name="permissionNotGranted">Permission not granted.</string>
+    <string name="useOSMGeocoder">Use Openstreet Maps for Geocoding</string>
 </resources>
