--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -256,4 +256,5 @@
   <string name="from">Başlangıç</string>
   <string name="to">Bitiş</string>
   <string name="permissionNotGranted">İzin verilmedi.</string>
+  <string name="useOSMGeocoder">Coğrafi kodlamar için OpenStreetMap kullanın</string>
 </resources>
