Approved. Step name: Proofread

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -256,4 +256,6 @@
   <string name="versionNotSupported">Your Android Version does not support this!</string>
   <string name="from">From</string>
   <string name="to">To</string>
+  <string name="permissionNotGranted">Permission not granted.</string>
+  <string name="useOSMGeocoder">Use OpenStreetMaps for Geocoding</string>
 </resources>
