--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -268,4 +268,5 @@
   <string name="from">Von</string>
   <string name="to">Bis</string>
   <string name="permissionNotGranted">Berechtigung wurde nicht erteilt.</string>
+  <string name="useOSMGeocoder">Nutze OpenStreetMaps für Geocoding</string>
 </resources>
