New Crowdin translations (#44)
* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* Translated

* Translated

* Translated

* Approved. Step name: Proofread

* New translations

* New translations

* Approved. Step name: Proofread

* Approved. Step name: Proofread

* New translations

* New translations

* New translations

* New translations

* Approved. Step name: Proofread

* Approved. Step name: Proofread

* Approved. Step name: Proofread

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* New translations

* Approved. Step name: Proofread

* New translations

* Approved. Step name: Proofread

* New translations

* New translations

* Translated

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -176,6 +176,7 @@
   <string name="shareTimes">Today\'s Prayertimes for %1$s</string>
   <string name="showMore">Show more</string>
   <string name="silenterDuration">Silenter duration</string>
+  <string name="silenterType">Silent Mode</string>
   <string name="silent">Silent</string>
   <string name="sorted">Sorted</string>
   <string name="soundPicker">Sound Picker</string>
@@ -186,6 +187,7 @@
   <string name="tesbihat">Tasbeehat</string>
   <string name="timeBased">Minutes</string>
   <string name="time">Time</string>
+  <string name="touchToSelectCity">Touch hier to select City</string>
   <string name="transWhiteWidget">Transparent White Widget</string>
   <string name="transWidget">Transparent Widget</string>
   <string name="test">Try</string>
@@ -249,5 +251,11 @@
   <string name="sendMail_sum">Send me an E-Mail!</string>
   <string name="beta_tester_desc">Register as Beta Tester by clicking here</string>
   <string name="no_internet">No Internet Connection</string>
-  <string name="addFromCSV">Add from CSV</string>
+  <string name="export">Export</string>
+  <string name="versionNotSupported">Your Android Version does not support this!</string>
+  <string name="from">From</string>
+  <string name="to">To</string>
+  <string name="permissionNotGranted">Permission not granted.</string>
+  <string name="useOSMGeocoder">Use OpenStreetMaps for Geocoding</string>
+
 </resources>
