--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -16,5 +16,94 @@
   ~ limitations under the License.
   -->
 <resources>
+  <string name="activateForMorePrefs">Активируйте для дополнительных настроек&#8230;</string>
+  <string name="adhanVolume">Громкость азана</string>
+  <string name="adjAngle">На основе эклиптики (угол / 60-я часть ночь)</string>
+  <string name="adjMidnight">Полночь</string>
+  <string name="adjTime">На основе времени (1/7-я часть ночи)</string>
+  <string name="afterImsak">После Фаджра</string>
+  <string name="alternativeOngoing">Альтернативный виджет уведомлений</string>
+  <string name="angle">Угол</string>
+  <string name="angleBased">Угол</string>
+  <string name="appName">Расписание молитв</string>
+  <string name="asr">Аср</string>
+  <string name="backup">Сделать резервную копию</string>
+  <string name="backupRestore">Резервное копирование / восстановление</string>
+  <string name="beforeSun">Перед восходом солнца</string>
+  <string name="blackWidget">Черный виджет</string>
+  <string name="calcMethod">Метод расчёта</string>
+  <string name="calendar">Памятные даты</string>
+  <string name="calendarIntegration">Интеграция календаря</string>
+  <string name="cancel">Отменить</string>
+  <string name="category">Категория</string>
+  <string name="changelog">﻿Что нового?</string>
+  <string name="cities">Города</string>
+  <string name="compass">Направление для молитвы</string>
+  <string name="corruptAudio">Ошибка аудио-файла</string>
+  <string name="customVolume">Установить громкость</string>
+  <string name="dateAndTime">Дата и время</string>
+  <string name="date">Дата</string>
+  <string name="dateFormat1">31 декабря 2013</string>
+  <string name="dateFormat2">31 декабря 13</string>
+  <string name="dateFormat">Формат даты</string>
+  <string name="dayFr">Пятница</string>
+  <string name="dayMo">Понедельник</string>
+  <string name="daySa">Суббота</string>
+  <string name="dayShortFr">Пт.</string>
+  <string name="dayShortMo">Пн.</string>
+  <string name="dayShortSa">Сб.</string>
+  <string name="dayShortSu">Вс.</string>
+  <string name="dayShortTh">Чт.</string>
+  <string name="dayShortTu">Вт.</string>
+  <string name="dayShortWe">Ср.</string>
+  <string name="daySu">Воскресенье</string>
+  <string name="dayTh">Четверг</string>
+  <string name="dayTu">Вторник</string>
+  <string name="dayWe">Среда</string>
+  <string name="delConfirmDhikr">Вы действительно хотите удалить \“%1$s\”?</string>
+  <string name="delConfirm">Вы действительно хотите удалить %1$s?</string>
+  <string name="delete">Удалить</string>
+  <string name="dhikrCount">Зикр цель</string>
+  <string name="dhikr">Зикр</string>
+  <string name="distance">Расстояние</string>
   <string name="donate">Support</string>
+  <string name="holyday8">Рамадан начинается</string>
+  <string name="holyday9">Ночь Предопределения</string>
+  <string name="holyday10">(Арафат Ид аль Фитр)</string>
+  <string name="holyday11">Ид аль Фитр</string>
+  <string name="holyday12">Ид аль Фитр 2-й день</string>
+  <string name="holyday13">Ид аль Фитр 3-й день</string>
+  <string name="holyday14">День Арафа</string>
+  <string name="holyday15">Ид аль Адха</string>
+  <string name="holyday16">Ид аль Адха 2-й день</string>
+  <string name="holyday17">Ид аль Адха 3-й день</string>
+  <string name="holyday18">Ид аль Адха 4-й день</string>
+  <string name="ishaa">Иша</string>
+  <string name="juristicHanafi">Ханафи</string>
+  <string name="juristicShafi">Шафи (по умолчанию)</string>
+  <string name="kerahatDuration">Нежелательное время - продолжительность</string>
+  <string name="kerahatIstiwa">Время Истива (до молитвы Зухр) </string>
+  <string name="kerahatMaghrib">Закат (перед молитвой Магриб)</string>
+  <string name="kerahatSun">Восход (после молитвы Фаджр)</string>
+  <string name="kerahatTime">Нежелательное для молитвы время</string>
+  <string name="language">Язык</string>
+  <string name="leftText">%1$s | %3$s до %2$s</string>
+  <string name="maghrib">Магриб</string>
+  <string name="missedPrayers">Пропущенные молитвы</string>
+  <string name="mixed">Смешанный</string>
+  <string name="monthly">Обзор месяца</string>
+  <string name="morningPrayer">Молитва Фаджр</string>
+  <string name="names">99 имён Аллаха</string>
+  <string name="newAddCity">Выберите город</string>
+  <string name="newDhikr">Новый Зикр</string>
+  <string name="noConnection">Подключение отсутствует&#8230;</string>
+  <string name="noFavs">Нет избранного</string>
+  <string name="no">Heт</string>
+  <string name="notification">Уведомление</string>
+  <string name="off">Выкл</string>
+  <string name="ok">Ok</string>
+  <string name="oldAddCity">Выберите город вручную</string>
+  <string name="ongoingIcon">Значок уведомления</string>
+  <string name="ongoingNotification">Виджет уведомлений</string>
+  <string name="other">Дополнительно</string>
 </resources>
