--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -121,7 +121,7 @@
   <string name="holyday8">بداية رمضان</string>
   <string name="holyday9">ليلة القدر</string>
   <string name="holyday10">آخر أيام شهر رمضان المبارك</string>
-  <string name="holyday11">عيد الفطر</string
+  <string name="holyday11">عيد الفطر</string>
   <string name="holyday12">اليوم التالي لعيد الفطر</string>
   <string name="holyday13">اليوم الثاني بعد عيد الفطر</string>
   <string name="holyday14">يوم عرفة</string>
