--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -250,6 +250,7 @@
   <string name="rate_desc">Leave us positive rating if you like Prayer times.</string>
   <string name="sendMail_sum">Send me an E-Mail!</string>
   <string name="beta_tester_desc">Register as Beta Tester by clicking here</string>
+  <string name="title_activity_maps">Map</string>
   <string name="no_internet">No Internet Connection</string>
   <string name="export">Export</string>
   <string name="versionNotSupported">Your Android Version does not support this!</string>
@@ -257,5 +258,7 @@
   <string name="to">To</string>
   <string name="permissionNotGranted">Permission not granted.</string>
   <string name="useOSMGeocoder">Use OpenStreetMaps for Geocoding</string>
-
+  <string name="addFromCSV">Add from CSV</string>
+  <string name="csvFromFile">Load CSV from File</string>
+  <string name="csvFromURL">Load CSV from URL</string>
 </resources>
