--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -21,7 +21,7 @@
   <string name="adjAngle">На основе эклиптики (угол / 60-я часть ночь)</string>
   <string name="adjMidnight">Полночь</string>
   <string name="adjTime">На основе времени (1/7-я часть ночи)</string>
-  <string name="afterImsak">После рассвета</string>
+  <string name="afterImsak">После Фаджра</string>
   <string name="alternativeOngoing">Альтернативный виджет уведомлений</string>
   <string name="angle">Угол</string>
   <string name="angleBased">Угол</string>
@@ -112,6 +112,9 @@
   <string name="hmonth12">Зуль-хиджа</string>
   <string name="holyday1">Исламский новый год</string>
   <string name="holyday2">Ашура</string>
+  <string name="holyday3">Мавлид</string>
+  <string name="holyday4">Начало трех месяцев</string>
+  <string name="holyday5">Ночь Рагаиб</string>
   <string name="holyday6">Ночь Исра и Мирадж</string>
   <string name="holyday7">Ночь Бараат</string>
   <string name="holyday8">Начало Рамадана</string>
@@ -191,6 +194,29 @@
   <string name="use12h">Использовать 12-часовой формат</string>
   <string name="useArabicNames">Использовать арабское расписание молитв</string>
   <string name="useSilenter">Беззвучный режим</string>
+  <string name="useVibration">Вибрация</string>
+  <string name="version">Версия</string>
+  <string name="vibrationDesc">Миллисекунды - ожидание вибрация ожидание&#8230;</string>
+  <string name="vibrationPattern">Тип вибрации</string>
+  <string name="volumeAlarm">Громкость будильника</string>
+  <string name="volumeMedia">Громкость мультимедиа</string>
+  <string name="volumeRingtone">Громкость звонка</string>
+  <string name="vote">Голосовать</string>
+  <string name="whiteWidget">Белый виджет</string>
+  <string name="widgetClock">Времена молитв - 4*2 Часы</string>
+  <string name="widgetCountdownType">Виджет - обратный отсчет минут</string>
+  <string name="widgetDesign">Тема оформления</string>
+  <string name="widgetLong">Времена молитв - 4*1 Виджет</string>
+  <string name="widget">Времена молитв - 2*2 Виджет</string>
+  <string name="widgetSilenter">Времена молитв - 4*1 Беззвучный Виджет</string>
+  <string name="widgetSmall">Времена молитв - 1*1 Виджет</string>
+  <string name="witr">Витр</string>
+  <string name="yes">Да</string>
+  <string name="zoomIn">Приблизить</string>
+  <string name="zoomOut">Уменьшить</string>
+  <string name="zuhr">Зухр</string>
+  <string name="calculated">Рассчитано</string>
+  <string name="beta_tester">Стать тестером</string>
   <string name="widgetClock2">Времена молитв - 2*2 Часы</string>
   <string name="numbers">Цифры</string>
   <string name="dateFormat3">31 декабря </string>
